--- a/src/components/ClearButton/ClearButton.module.scss
+++ b/src/components/ClearButton/ClearButton.module.scss
@@ -8,6 +8,7 @@
    border: none;
    outline: none;
    cursor: pointer;
+   background-color: transparent;
 }
 
 .clear_button:active,
